# soundfleet

./: .gitignore  README.md  manage.py  pytest.ini  requirements.dev.txt  requirements.txt  setup.cfg
media/: fields.py  models.py
media/migrations/: 0001_initial.py
media/storage/: local.py  mixins.py  s3.py
media/storage/rippers/: mp3.py
music/: models.py
music/migrations/: 0001_initial.py
soundfleet/: asgi.py  urls.py  wsgi.py
soundfleet/accounts/: apps.py  models.py
soundfleet/accounts/migrations/: 0001_initial.py
soundfleet/ads/: apps.py  models.py
soundfleet/ads/migrations/: 0001_initial.py
soundfleet/api/: views.py
soundfleet/api/music/: serializers.py  views.py
soundfleet/media/: apps.py  fields.py  models.py  tasks.py
soundfleet/media/migrations/: 0001_initial.py
soundfleet/media/storage/: local.py  mixins.py  s3.py
soundfleet/media/storage/rippers/: dummy.py
soundfleet/music/: apps.py  models.py
soundfleet/music/migrations/: 0001_initial.py
soundfleet/settings/: settings.py
soundfleet/settings/custom/examples/: local.py  s3.py
tests/unittests/media/: test_fields.py  test_storage.py
utils/db/: fields.py
