[metadata]
name = Soundfleet
description = Soundfleet backend service
author = Soundfleet team
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7.3,<4.0.0

[options.packages.find]
where = src

[flake8]
max-line-length = 80
per-file-ignores =
    */migrations/*:E501
    *.py:E203 E231 W503
    src/dims/settings/*:E501
